// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should allow id overriding 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_default_base"
  >
    <div
      class="base"
    >
      <div
        class="base list_default"
        role="tablist"
      >
        <button
          aria-controls="tab-1-title-0"
          aria-selected="true"
          class="base appearance cursorPointer button display_block root_default_base root_active_base"
          role="tab"
        >
          <span
            class="item"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-controls="tab-2-title-1"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-controls="tab-3-title-2"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base width_full root"
  >
    <div
      class="base width_full root"
      id="tab-1-title-0"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should allow rendering indications 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_default_base"
  >
    <div
      class="base"
    >
      <div
        class="base list_default"
        role="tablist"
      >
        <button
          aria-controls="od-10-0-tab"
          aria-selected="true"
          class="base appearance cursorPointer button display_block root_default_base root_active_base"
          role="tab"
        >
          <span
            class="item"
          >
            tab 1 title
          </span>
          <span
            class="indication_default_base indication_active_base"
          >
            5
          </span>
        </button>
        <button
          aria-controls="od-10-1-tab"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 2 title
          </span>
          <span
            class="indication_default_base"
          >
            5
          </span>
        </button>
        <button
          aria-controls="od-10-2-tab"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 3 title
          </span>
          <span
            class="indication_default_base"
          >
            5
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base width_full root"
  >
    <div
      class="base width_full root"
      id="od-10-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;

exports[`<Tabs /> should match snapshot (high level) 1`] = `
<div
  class="base width_full"
>
  <div
    class="base root_default_base"
  >
    <div
      class="base"
    >
      <div
        class="base list_default"
        role="tablist"
      >
        <button
          aria-controls="od-1-0-tab"
          aria-selected="true"
          class="base appearance cursorPointer button display_block root_default_base root_active_base"
          role="tab"
        >
          <span
            class="item"
          >
            tab 1 title
          </span>
        </button>
        <button
          aria-controls="od-1-1-tab"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 2 title
          </span>
        </button>
        <button
          aria-controls="od-1-2-tab"
          aria-selected="false"
          class="base appearance cursorPointer button display_block root_default_base"
          role="tab"
          tabindex="-1"
        >
          <span
            class="item"
          >
            tab 3 title
          </span>
        </button>
      </div>
    </div>
  </div>
  <div
    class="base 6_mobile_base 6_mobile_base width_full root"
  >
    <div
      class="base width_full root"
      id="od-1-0-tab"
      role="tabpanel"
      tabindex="0"
    >
      tab 1 content
    </div>
  </div>
</div>
`;
